[package]
name = "the-world-allocator"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "1.9.0"
hashbrown = { version = "0.13.2", features = ["nightly"] }
lazy_static = "1.4.0"
nix = { version = "0.26" }


[features]
print_debug = []
